update java note